fixed alignment of spinner and generated link

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@ code {
     monospace;
 }
 
+p {
+  text-align: center;
+}
+
 section p {
+  text-align: unset;
   margin-bottom: 40px;
 }
